--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -1,57 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="@dimen/activity_horizontal_margin">
 
-    <RelativeLayout
-        android:id="@+id/title_layout"
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <variable
+            name="note"
+            type="com.phonepe.notely.dao.model.Note" />
+    </data>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="@dimen/activity_horizontal_margin">
+
+        <RelativeLayout
+            android:id="@+id/title_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_toLeftOf="@+id/favorite"
+                android:layout_toStartOf="@+id/favorite"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/title_text_size"
+                android:textStyle="bold"
+                android:text="@{note.title}"/>
+
+            <CheckBox
+                android:id="@+id/favorite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:layout_toLeftOf="@+id/heart"
+                android:layout_toStartOf="@+id/heart"
+                android:button="@drawable/favorite_drawable_selector"
+                android:checked="@{note.favorite}"/>
+
+            <CheckBox
+                android:id="@+id/heart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:button="@drawable/heart_drawable_selector"
+                android:checked="@{note.hearted}"/>
+
+        </RelativeLayout>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_toStartOf="@+id/favorite"
-            android:layout_toLeftOf="@+id/favorite"
-            android:id="@+id/title"
-            android:textSize="@dimen/title_text_size"
-            android:textStyle="bold"
-            android:maxLines="1"
+            android:id="@+id/description"
+            style="@style/description_text_style"
             android:ellipsize="end"
-            android:textColor="@android:color/black"/>
+            android:maxLines="1"
+            android:text="@{note.description}"/>
 
-        <CheckBox
-            android:id="@+id/favorite"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/heart"
-            android:layout_toStartOf="@+id/heart"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:button="@drawable/favorite_drawable_selector"/>
+        <TextView
+            android:id="@+id/created_at"
+            style="@style/date_text_view_style"
+            app:formattedDate="@{note.lastUpdated}"
+            />
 
-        <CheckBox
-            android:id="@+id/heart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:button="@drawable/heart_drawable_selector"/>
-
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/description"
-        android:maxLines="1"
-        android:ellipsize="end"
-        style="@style/description_text_style" />
-
-    <TextView
-        android:id="@+id/created_at"
-        style="@style/date_text_view_style" />
-
-</LinearLayout>
+    </LinearLayout>
+</layout>
