--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,6 +5,10 @@
         <variable
             name="homeViewModel"
             type="com.phonepe.notely.viewmodels.HomeViewModel" />
+
+        <variable
+            name="context"
+            type="android.content.Context" />
     </data>
 
     <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -40,7 +44,8 @@
                 android:background="@android:color/transparent"
                 android:fitsSystemWindows="true"
                 android:scrollbarStyle="outsideOverlay"
-                android:choiceMode="multipleChoice" />
+                android:choiceMode="multipleChoice"
+                app:adapter="@{context}"/>
 
 
             <Button
