--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -66,7 +66,7 @@
         <TextView
             android:id="@+id/created_at"
             style="@style/date_text_view_style"
-            app:formattedDate="@{note.lastUpdated}"
+            app:formatDate="@{note.lastUpdated}"
             />
 
     </LinearLayout>
