--- a/app/src/main/res/layout/view_mode_layout.xml
+++ b/app/src/main/res/layout/view_mode_layout.xml
@@ -1,45 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+<layout>
 
-    <LinearLayout
+    <data>
+        <import type="com.phonepe.notely.ui.model.Mode" />
+        <variable
+            name="note"
+            type="com.phonepe.notely.dao.model.Note" />
+
+        <variable
+            name="mode"
+            type="com.phonepe.notely.ui.model.Mode" />
+
+    </data>
+
+    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:padding="@dimen/activity_horizontal_margin"
-            android:orientation="vertical"
-            android:minHeight="120dp">
+            android:orientation="vertical">
 
-
-            <com.phonepe.notely.ui.custom.LogoTextView
-                android:id="@+id/title_text_view"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:textAppearanceLarge"/>
-            
+                android:background="@color/colorPrimary"
+                android:minHeight="120dp"
+                android:orientation="vertical"
+                android:padding="@dimen/activity_horizontal_margin">
+
+
+                <com.phonepe.notely.ui.custom.LogoTextView
+                    android:id="@+id/title_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:textAppearanceLarge"
+                    android:text='@{note != null ? note.title : "" }' />
+
+                <TextView
+                    android:id="@+id/lastUpdatedAt"
+                    style="@style/date_text_view_style"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    app:formatDate='@{note != null ? note.lastUpdated : ""}' />
+
+            </LinearLayout>
+
+
             <TextView
-                android:id="@+id/lastUpdatedAt"
-                style="@style/date_text_view_style"
-                android:layout_marginTop="@dimen/activity_vertical_margin"/>
+                android:id="@+id/description_text_view"
+                style="@style/description_text_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/activity_horizontal_margin"
+                android:text='@{note != null ? note.description : ""}' />
 
         </LinearLayout>
-        
-        
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/description_text_view"
-            style="@style/description_text_style"
-            android:padding="@dimen/activity_horizontal_margin" />
 
-    </LinearLayout>
-
-</android.support.v4.widget.NestedScrollView>
+    </android.support.v4.widget.NestedScrollView>
+</layout>
